Add Map and New Feature

--- a/View/Views/Animal/Detail.cshtml
+++ b/View/Views/Animal/Detail.cshtml
@@ -80,6 +80,7 @@
     </div>
     <div class="card-body card-body-custom">
         <h5 class="card-title">Tên: @Model.Name</h5>
+        <p class="card-text">Loại: @Model.Loai</p>
         <p class="card-text">Tiêu đề: @Model.Description</p>
         <p class="card-text">Tuổi: @Model.AgeAvg</p>
     </div>
