--- a/View/Views/WareHouse/Index.cshtml
+++ b/View/Views/WareHouse/Index.cshtml
@@ -16,7 +16,7 @@
             <tr class="text-white">
                 <td>@item.Animal_Name</td>
                 <td>@item.Category_Name</td>
-                <td><a class="btn btn-danger" asp-controller="WareHouse" asp-action="Delete" asp-route-id="@item.Id">Delete</a></td>
+                    <td><a class="btn btn-danger" asp-controller="WareHouse" asp-action="Delete" asp-route-id="@item.Id"><i class="fa-solid fa-trash"></i></a></td>
             </tr>
         }
         </tbody>
