--- a/View/Views/Account/Register.cshtml
+++ b/View/Views/Account/Register.cshtml
@@ -66,8 +66,8 @@
                     }
                     else
                     {
-                        <input class="form-check-input" type="checkbox" name="Roles" value="@role" id="role-@role" />
-                        <label class="form-check-label text-white" for="role-@role">Admin</label>
+                        @* <input class="form-check-input" type="checkbox" name="Roles" value="@role" id="role-@role" />
+                        <label class="form-check-label text-white" for="role-@role">Admin</label> *@
                     }
                 </div>
             }
