--- a/View/Views/Contacts/Index.cshtml
+++ b/View/Views/Contacts/Index.cshtml
@@ -2,48 +2,65 @@
 
 @{
     ViewData["Title"] = "Index";
+    var list = ViewBag.list;
+    int i = 0;
+    foreach (var item in list)
+    {
+        i++;
+    }
 }
 
 <h1 class="text-center my-4 text-white">Các phiếu khiếu nại</h1>
-
-<table class="table table-striped table-bordered text-white">
-    <thead class="thead-dark">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Address)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </th>
-        <th class="text-center">Hành động</th>
-    </tr>
-    </thead>
-    <tbody>
-    @foreach (var item in Model) {
+@if (@i != 0)
+{
+    <table class="table table-striped table-bordered text-white">
+        <thead class="thead-dark">
         <tr>
-            <td class="text-white">
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td class="text-white">
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td class="text-white">
-                @Html.DisplayFor(modelItem => item.PhoneNumber)
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Address)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PhoneNumber)
+            </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Description)
+                </th>
+            <th class="text-center">Hành động</th>
+        </tr>
+        </thead>
+    
+        <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td class="text-white">
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td class="text-white">
+                    @Html.DisplayFor(modelItem => item.Address)
+                </td>
+                <td class="text-white">
+                    @Html.DisplayFor(modelItem => item.PhoneNumber)
+                </td>
                 <td class="text-white">
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
-            <td class="text-center">
-                <a asp-action="Details" asp-route-id="@item.ID" class="btn btn-info btn-sm">Details</a>
-                <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger btn-sm">Delete</a>
-            </td>
-        </tr>
-    }
-    </tbody>
-</table>
+                <td class="text-center">
+                        <a asp-action="Details" asp-route-id="@item.ID" class="btn btn-info btn-sm"><i class="fa-solid fa-circle-info"></i></a>
+                        <a asp-action="Delete" asp-route-id="@item.ID" class="btn btn-danger btn-sm"><i class="fa-solid fa-trash"></i></a>
+                </td>
+            </tr>
+        }
+        </tbody>
+    </table>
+}
+else
+{
+    <p class="text-center text-white ">Chưa có phiếu khiếu nại</p>
+}
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
