--- a/View/wwwroot/css/site.css
+++ b/View/wwwroot/css/site.css
@@ -5,7 +5,6 @@ html {
 @media (min-width: 768px) {
     html {
         font-size: 16px;
-        
     }
 }
 
@@ -16,13 +15,13 @@ html {
 html {
     position: relative;
     min-height: 100%;
-    
 }
 
 body {
-    margin-bottom: 60px;
+    margin-bottom:100px;
     background-color: #2d3436;
-    color: black
+    color: black;
+
 }
 /* General table styling */
 table {
@@ -38,4 +37,5 @@ th, td {
 th {
     background-color: #f5f5f5; /* Light background for headers */
 }
+
 
