--- a/View/Views/Account/Register.cshtml
+++ b/View/Views/Account/Register.cshtml
@@ -41,7 +41,7 @@
             }
 </style>
 
-<div class="register-form">
+<div class="register-form" style="margin-bottom:101px">
     <form asp-controller="Account" asp-action="RegisterUser" method="post">
         <div class="form-group">
             <label asp-for="Username"></label>
