--- a/View/Views/Account/PageLogin.cshtml
+++ b/View/Views/Account/PageLogin.cshtml
@@ -41,15 +41,17 @@
             }
 </style>
 
-<div class="login-form">
+<div class="login-form" style="margin-bottom:218px">
+    <p class="text-warning"> @TempData["Wrong"]</p>
+   
     <form asp-controller="Account" asp-action="Login" method="post">
         <div class="form-group">
             <label asp-for="Username"></label>
-            <input asp-for="Username" class="form-control" />
+            <input asp-for="Username" class="form-control"/>
         </div>
         <div class="form-group">
             <label asp-for="Password"></label>
-            <input id="floatingPassword" asp-for="Password" type="password" class="form-control" />
+            <input id="floatingPassword" asp-for="Password" type="password" class="form-control"/>
         </div>
         <div class="form-check mt-2">
             <input class="form-check-input" type="checkbox" id="showPassword" onclick="togglePassword()">
